@@ -71,6 +71,8 @@ public:
 		int att_weapon, int def_weapon, const std::string& attacker_type_id,
 		const std::string& defender_type_id, int attacker_lvl,
 		int defender_lvl, const size_t turn, const time_of_day &t);
+	void add_auto_shroud(bool turned_on);
+	void update_shroud();
 	void add_seed(const char* child_name, int seed);
 	void user_input(const std::string &, const config &);
 	void add_label(const terrain_label*);
